CHT-239: Refactoring uci-arena